<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context="com.loopeer.android.loginlib.demo.LoginActivity">

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?listPreferredItemHeightSmall"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical"
                >

                <EditText
                    android:id="@+id/code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:hint="@string/action_sign_in_code"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_code"
                    android:imeOptions="actionUnspecified"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true"/>

               <include
                   layout="@layout/view_captcha"
                   android:layout_height="wrap_content"
                   android:layout_width="0dp"
                   android:layout_gravity="center"
                   android:layout_weight="1"
                   />

            </LinearLayout>


            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"/>

        <com.loopeer.android.loginlib.view.LoginSubmit
            android:id="@+id/login_fast_submit"
            android:layout_width="match_parent"
            android:layout_height="?listPreferredItemHeightSmall"
            style="@style/Widget.AppCompat.Button.Small"
            android:text="@string/fast_login"
            />


    </LinearLayout>
</LinearLayout>
